# dns-proxy-mac

./: Cargo.toml  README.md  com.dns-proxy.log.conf  com.dns-proxy.plist  config.toml  dns-proxy.sb
src/: config.rs  main.rs  server.rs
